--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
     <title>FoodOrderingApp</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="root">
-    <h1>Not Rendered </h1> 
-     <!-- this is replaced by paresnt using react.render -->
-</div>
+      <h1>Not Rendered</h1>
+      <!-- this is replaced by paresnt using react.render -->
+    </div>
 
-
-<script type="module" src="src\App.js"></script>
-</body>
+    <script type="module" src="src\App.js"></script>
+  </body>
 </html>
