change something to deploy on vercel

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="./index.css" />
     <title>FoodOrderingApp</title>
   </head>
   <body>
     <div id="root">
       <h1>Not Rendered</h1>
-      <!-- this is replaced by paresnt using react.render -->
+      <!-- this is replaced by parent using react.render -->
     </div>
 
-   <script type="module" src="src\App.js"></script>
+    
+    <script type="module" src="./src/App.js"></script>
   </body>
 </html>
